# delta-terminal

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  CLAUDE.md  DEPLOYMENT.md  ERRORBOUND_IMPLEMENTATION.md  README.md  REASONING_CHAIN_IMPLEMENTATION.md  SECURITY_FIXES.md  SETUP_COMPLETE.md  commitlint.config.js  docker-compose.app.yml  docker-compose.yml  frontend-setup.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json
ai-engine/nlp-processor/: .coveragerc  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  README.md  TESTING_GUIDE.md  TEST_SUMMARY.md  pyproject.toml  railway.toml  requirements.txt  run_tests.sh
ai-engine/nlp-processor/examples/: example_requests.http
ai-engine/nlp-processor/scripts/: setup.sh
ai-engine/nlp-processor/src/: __init__.py  __main__.py  config.py  main.py
ai-engine/nlp-processor/src/api/: router.py
ai-engine/nlp-processor/src/chains/: __init__.py  strategy_chain.py
ai-engine/nlp-processor/src/models/: __init__.py  insight_schemas.py  llm_routing.py  reasoning_chain.py  response_ontology.py  schemas.py  strategy_perspectives.py
ai-engine/nlp-processor/src/prompts/: __init__.py  insight_prompts.py  strategy_prompts.py
ai-engine/nlp-processor/src/repositories/: __init__.py  insight_repository.py
ai-engine/nlp-processor/src/services/: __init__.py  conversation_store.py  insight_service.py  intent_cache.py  intent_service.py  llm_router.py  llm_service.py  market_data_service.py  parser_service.py  prompt_guard.py  reasoning_service.py  strategy_client.py
ai-engine/nlp-processor/src/utils/: __init__.py  input_sanitizer.py
ai-engine/nlp-processor/tests/: README.md  test_chat_endpoint.py  test_input_sanitizer.py  test_insight_schemas.py  test_insight_service.py  test_intent_service.py  test_main.py  test_models.py  test_response_ontology.py
ai-engine/signal-analyzer/: .env.example  .gitignore  CHECKLIST.md  CLAUDE.md  Dockerfile  Makefile  PROJECT_SUMMARY.md  QUICK_REFERENCE.md  README.md  example_usage.py  pyproject.toml
ai-engine/signal-analyzer/src/: __init__.py  config.py  main.py
ai-engine/signal-analyzer/src/indicators/: __init__.py  momentum.py  trend.py  volume.py
ai-engine/signal-analyzer/src/models/: __init__.py  signal_schemas.py
ai-engine/signal-analyzer/src/services/: __init__.py  aggregator_service.py  indicator_service.py  signal_service.py
ai-engine/signal-analyzer/tests/: test_indicators.py
ai-engine/strategy-generator/: .env.example  .gitignore  CLAUDE.md  DELIVERY_REPORT.md  Dockerfile  IMPLEMENTATION_CHECKLIST.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
ai-engine/strategy-generator/examples/: usage_examples.py
ai-engine/strategy-generator/scripts/: dev-setup.sh  health-check.sh
ai-engine/strategy-generator/src/: __init__.py  config.py  main.py
ai-engine/strategy-generator/src/api/: router.py
ai-engine/strategy-generator/src/models/: schemas.py
ai-engine/strategy-generator/src/services/: generator_service.py  optimizer_service.py  validator_service.py
ai-engine/strategy-generator/src/strategies/: base.py
ai-engine/strategy-generator/tests/: test_generator.py  test_strategies.py
data-pipeline/backtest-engine/: .env.example  .gitignore  CLAUDE.md  DEPLOYMENT.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  docker-compose.yml  example_backtest.py  pyproject.toml  railway.toml  requirements.txt  run.sh  verify_install.py
data-pipeline/backtest-engine/src/: __init__.py  config.py  main.py
data-pipeline/backtest-engine/src/api/: router.py
data-pipeline/backtest-engine/src/engine/: backtest_engine.py  data_handler.py  event_engine.py  execution.py  portfolio.py
data-pipeline/backtest-engine/src/metrics/: performance.py  risk.py
data-pipeline/backtest-engine/src/models/: schemas.py
data-pipeline/backtest-engine/tests/: test_backtest_engine.py
data-pipeline/market-data-collector/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_STRUCTURE.txt  PROJECT_SUMMARY.md  README.md  docker-compose.yml  pyproject.toml  pytest.ini
data-pipeline/market-data-collector/monitoring/: prometheus.yml
data-pipeline/market-data-collector/scripts/: example-requests.sh  init-db.sql  setup.sh
data-pipeline/market-data-collector/src/: __init__.py  config.py  main.py
data-pipeline/market-data-collector/src/api/: router.py
data-pipeline/market-data-collector/src/collectors/: base.py  kline_collector.py  orderbook_collector.py  ticker_collector.py  trade_collector.py
data-pipeline/market-data-collector/src/models/: schemas.py
data-pipeline/market-data-collector/src/services/: data_service.py
data-pipeline/market-data-collector/src/storage/: redis_cache.py  timescale.py
data-pipeline/market-data-collector/tests/: __init__.py  conftest.py  test_collectors.py  test_data_service.py
trading-engine/exchange-connector/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
trading-engine/exchange-connector/src/: __init__.py  config.py  main.py
trading-engine/exchange-connector/src/api/: router.py
trading-engine/exchange-connector/tests/: test_connectors.py
trading-engine/order-executor/: .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
trading-engine/order-executor/examples/: api_client_example.py
trading-engine/order-executor/scripts/: quick_start.sh
trading-engine/order-executor/src/: __init__.py  config.py  main.py
trading-engine/order-executor/tests/: test_market_executor.py
trading-engine/risk-manager/: .env.example  .gitignore  CLAUDE.md  Dockerfile  FILES_CREATED.txt  PROJECT_SUMMARY.md  README.md  SETUP.md  pyproject.toml  requirements.txt  run.sh  test_api.sh
trading-engine/risk-manager/src/: __init__.py  config.py  main.py
(+696 files in other folders)
