[tool.poetry]
name = "backtest-engine"
version = "0.1.0"
description = "Delta Terminal - 高性能量化回测引擎"
authors = ["Delta Terminal Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
uvicorn = {extras = ["standard"], version = "^0.27.0"}
pydantic = "^2.5.3"
pydantic-settings = "^2.1.0"
pandas = "^2.1.4"
numpy = "^1.26.3"
scipy = "^1.11.4"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"
tables = "^3.9.2"
pyarrow = "^14.0.2"
redis = "^5.0.1"
aioredis = "^2.0.1"
httpx = "^0.26.0"
python-multipart = "^0.0.6"
jinja2 = "^3.1.3"
openpyxl = "^3.1.2"
xlsxwriter = "^3.1.9"
python-dateutil = "^2.8.2"
pytz = "^2023.3"
joblib = "^1.3.2"
numba = "^0.59.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.4"
pytest-asyncio = "^0.23.3"
pytest-cov = "^4.1.0"
black = "^23.12.1"
ruff = "^0.1.11"
mypy = "^1.8.0"
ipython = "^8.19.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
